--- a/app/scss/global/_header.scss
+++ b/app/scss/global/_header.scss
@@ -94,7 +94,7 @@
         align-items: flex-end;
       
         opacity: 0;
-        transform: translateX(50%);
+        transform: translateX(50px);
       
         transition: transform 0.4s ease, opacity 0.4s ease;
         pointer-events: none;
@@ -115,6 +115,7 @@
           transform: translateX(0);
           pointer-events: auto;
           z-index: 20;
+          transition: transform 0.4s ease, opacity 0.4s ease;
         }
       }
 
