--- a/app/scss/index/_map.scss
+++ b/app/scss/index/_map.scss
@@ -1,7 +1,4 @@
 .map {
-  .title {
-    margin-bottom: 0;
-  }
   &__inner {
     svg {
       width: 100%;
